test/aws/terraform/public_access_security_groups_port_rule/port_22_allowed_from_internet_to_ec2_using_tf_instance_module/cloudrail_results.txt

It seems there is some use of Terraform in your code that is not supported by Cloudrail’s version of Terraform and its related providers. 
Please see detailed log below. You may either change your code to correct these issues, or contact us through https://indeni.com/cloudrail-user-support/ and mentioned job_id '7132a947-50f3-4265-9904-5488bbbf8171'
Error: UnauthorizedOperation: You are not authorized to perform this operation.
	status code: 403, request id: 8407d7c2-efd0-43a1-b924-2722724534ef

  on .terraform/modules/vpc_example_complete-vpc/examples/complete-vpc/main.tf line 5, in data "aws_security_group" "default":
   5: data "aws_security_group" "default" {




